# pysqlx

./: Cargo.toml  pyproject.toml  test.py
.github/workflows/: CI.yml
src/: lib.rs  str.rs  typeref.rs
