[package]
name = "pysqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pysqlx"
crate-type = ["cdylib"]

[dependencies]
dashmap = "6.1.0"
eyre = { version = "0.6.12" } # when pyo3 0.23 releases features = ["pyo3"] }
hashbrown = { version = "0.15.0" }
# pyo3 = { version = "0.22.5", features = ['experimental-inspect', 'experimental-async']}
pyo3 = { git = "https://github.com/PyO3/pyo3.git", features = ['experimental-inspect', 'experimental-async']}
sqlx = { git = "https://github.com/i404788/sqlx.git", features = ["sqlite", "postgres", "tls-rustls", "runtime-async-std", "any"] }
bytecount = { version = "^0.6.7", default-features = false, features = ["runtime-dispatch-simd"] }

futures-core = { version = "0.3.31" }
futures = "0.3.31"


[features]
intrinsics = []
optimize = []
